--- a/src/stylesheet/pages/_login.scss
+++ b/src/stylesheet/pages/_login.scss
@@ -18,7 +18,6 @@
 
   .login-external-list {
     padding: 30px 0;
-    text-align: center;
     width: 30%;
     margin: 0 auto;
   }
@@ -29,7 +28,6 @@
       width: 20px;
       height: 20px;
       position: absolute;
-      text-align: center;
       cursor: pointer;
     }
   }
@@ -41,7 +39,7 @@
 
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: map-get($breakpoints , md)) {
   .auth-body {
     margin: auto 0;
   }
